...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_room_24px"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/activity_bank_txt_gold_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/activity_bank_img_dolr"
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_room_dolr"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/activity_bank_txt_dolr_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/activity_bank_img_penny"
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_room_penny"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/activity_bank_txt_penny_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/activity_bank_img_quid"
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_room_quid"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/activity_bank_txt_quid_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/activity_bank_img_shil"
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_room_shil"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/activity_bank_txt_shil_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

...
