<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/activity_map_mv_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraTargetLat="-3.189181"
        mapbox:mapbox_cameraTargetLng="55.943548"
        mapbox:mapbox_cameraZoom="11"
        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

    </com.mapbox.mapboxsdk.maps.MapView>

    <Button
        android:id="@+id/activity_map_btn_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/wallet"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintHorizontal_bias="0.971"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="@+id/activity_map_mv_map"
        mapbox:layout_constraintVertical_bias="0.932" />

    <Button
        android:id="@+id/activity_map_btn_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bank"
        mapbox:layout_constraintBottom_toTopOf="@+id/activity_map_btn_wallet"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintHorizontal_bias="0.971"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/activity_map_btn_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/friends"
        mapbox:layout_constraintBottom_toTopOf="@+id/activity_map_btn_bank"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintHorizontal_bias="0.971"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:layout_constraintVertical_bias="1.0"/>

    <Button
        android:id="@+id/activity_map_btn_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/log_out"
        mapbox:layout_constraintBottom_toTopOf="@+id/activity_map_btn_reward"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="@+id/activity_map_mv_map"
        mapbox:layout_constraintHorizontal_bias="0.971"
        mapbox:layout_constraintVertical_bias="1.0"/>

    <Button
        android:id="@+id/activity_map_btn_reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/reward"
        mapbox:layout_constraintBottom_toTopOf="@+id/activity_map_btn_friends"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:layout_constraintHorizontal_bias="0.971"
        mapbox:layout_constraintVertical_bias="1.0"/>

    <TextView
        android:id="@+id/activity_map_txt_game_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>